Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             
             <td class="video-topo">
                 <video autoplay loop muted playsinline style="width: 51%; height: 5%; object-fit: cover; display: block; margin: 0 auto;">
-                    <source src="videosol.mp4.mp4" type="video/mp4">
+                    <source src="solas2videos.mp4.mp4" type="video/mp4">
                 </video>
             </td>
         </tr>
